plugins {
    id 'io.quarkus' version "$quarkusPluginVersion"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation project(':common-avro')
    implementation "io.quarkus:quarkus-avro"
    implementation "io.quarkus:quarkus-confluent-registry-avro"
    implementation 'io.quarkus:quarkus-minikube'
    implementation 'io.quarkus:quarkus-scheduler'
    implementation 'io.quarkus:quarkus-kubernetes'
    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka:3.10.0'
    implementation 'io.quarkus:quarkus-arc'

    // Database
    implementation "io.quarkus:quarkus-hibernate-orm"
    implementation "io.quarkus:quarkus-hibernate-orm-panache"
    implementation "io.quarkus:quarkus-jdbc-postgresql"

    // Confluent serde (версию подбери совместимую с native)
    implementation("io.confluent:kafka-avro-serializer:7.2.0") {
        exclude group: "jakarta.ws.rs", module: "jakarta.ws.rs-api"
    }

    // Jackson (для парсинга JSON)
    implementation 'io.quarkus:quarkus-jackson:3.12.2'

    // Lombok (для автогенерации геттеров/сеттеров и т.д.)
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'io.quarkus:quarkus-junit5'
}